<resources>
    <string name="app_name">OpenTasker</string>
    <string name="principal">Home Page</string>
    <string name="horario">Schedule</string>
    <string name="pomodoro" translatable="false">Pomodoro</string>
    <string name="notas">Notes</string>
    <string name="ajustes">Settings</string>
    <string name="nodatos">It\'s empty over here.</string>
    <string name="tituloeventos">Events</string>
    <string name="addnota">Create note</string>
    <string name="addevent">Create event</string>
    <string name="titulonotas">Notes</string>
    <string name="inicio">Home</string>
    <string name="abierto">Open</string>
    <string name="cerrado">Closed</string>
    <string name="nuevo_evento">New event</string>
    <string name="nombre_evento">Name of the event</string>
    <string name="escriba_aqui">Write here</string>
    <string name="categoria">Category</string>
    <string name="tipo">Type</string>
    <string name="fecha_evento">Date of the event</string>
    <string name="date_format" translatable="false">dd/mm/yyyy</string>
    <string name="crear_evento">Create event</string>
    <string name="titulo">Title</string>
    <string name="incluir_categoria">Include category?</string>
    <string name="guardar">Save</string>
    <string name="borrar_nota">Delete note</string>
    <string name="eventos_completados">Completed Events</string>
    <string name="eventos">Events</string>
    <string name="modify_evento">Modify event</string>
    <string name="addpomodoro">Add pomodoro</string>
    <string name="escoger_color">Choose color</string>
    <string name="heredar_color">Inherit color from category</string>
    <string name="empezar_pomodoro">Start pomodoro</string>
    <string name="addtiempo">Add time</string>
    <string name="reiniciar_pomodoro">Restart pomodoro</string>
    <string name="cancelar">Cancel</string>
    <string name="aceptar">Accept</string>
    <string name="nombre_pomodoro">Name of the pomodoro</string>
    <string name="descanso">Rest</string>
    <string name="bucle">Loop</string>
    <string name="categorias">Categories</string>
    <string name="gestionar_categorias">Manage categories</string>
    <string name="tipos">Types</string>
    <string name="gestionar_tipos">Manage types</string>
    <string name="agenda" translatable="false">Agenda</string>
    <string name="fecha_inicio">Date of start</string>
    <string name="fecha_final">Date of end</string>
    <string name="dia_inicio">Starting day</string>
    <string name="duracion_semana">Week length</string>
    <string name="addtipo">Add type</string>
    <string name="nueva_categoria">New category</string>
    <string name="nombre_categoria">Name of the category</string>
    <string name="modify_categoria">Modify category</string>
    <string name="addcategoria">Add category</string>
    <string name="misc">Misc</string>
    <string name="add_hora">Add time period</string>
    <string name="nueva_hora">New period</string>
    <string name="dia_de_la_semana">Day of the week</string>
    <string name="hora_inicial">Time of beginning</string>
    <string name="hora_final">Ending time</string>
    <string name="acronimo_categoria">Acronym of the category</string>
    <string name="modificar_hora">Modify period</string>
    <string name="borrar">Delete</string>
    <string name="editar">Edit</string>
    <string name="frecuencia_notificaciones">Notification frequency</string>
    <string name="idioma">Language</string>
    <string name="recordatorio_evento">Event reminder</string>
    <string name="dias_para">days till</string>
    <string name="estas_seguro_de_borrar_masc">Are you sure you want to delete this</string>
    <string name="hora">" period"</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="error_borrando">Error while deleting</string>
    <string name="error_obteniendo">Error while loading</string>
    <string name="debe_ingresar_hora_inicio">You must insert a starting time</string>
    <string name="debe_ingresar_hora_fin">You must insert a finish time</string>
    <string name="la_hora_debe_ser_menor_a_las_11_00">The time must be before 23:00</string>
    <string name="inicio_nomayorque_fin">The beginning time must not be after the finishing time</string>
    <string name="inicio_superpone_hora">The beginning time overlaps another period</string>
    <string name="fin_superpone_hora">The finishing time overlaps another period</string>
    <string name="error_modificando">Error while modifying</string>
    <string name="estas_seguro_de_borrar_fem">Are you sure you want to delete this</string>
    <string name="error_obteniendo_id">Error while getting id</string>
    <string name="nombre_es_obligatorio">Name must not be blank</string>
    <string name="acronimo_es_obligatorio">Acronym must not be blank</string>
    <string name="fecha_es_obligatoria">Date must not be blank</string>
    <string name="evento">" event"</string>
    <string name="error_insertando">Error while inserting</string>
    <string name="nota">" note"</string>
    <string name="selecciona_algo_tiempo">Time must be greater than 0 seconds</string>
    <string name="tiempo">" time"</string>
    <string name="titulo_es_obligatorio">Title must not be blank</string>
    <string name="error_posicion">Error while updating or getting position</string>
    <string name="pausa_para_editar">Pause to edit</string>
    <string name="add_algun_tiempo">Add at least one time</string>
    <string name="reset_para_borrar">Reset to delete times</string>
    <string name="adapter_no_nulo">Adapter must not be null</string>
    <string name="no_tiempos">There are no times</string>
    <string name="nombre_tipo">Name of the type</string>
    <string name="preference_no_encontrado">Preference not found:</string>
    <string name="agenda_minuscula" translatable="false">" agenda"</string>
    <string name="fecha">Date</string>
    <string name="pomodoro_minuscula" translatable="false">" pomodoro"</string>
    <string name="siguiente">Next</string>
    <string name="datos_agenda">Agenda data</string>
    <string name="categoria_minuscula">" category"</string>
    <string name="agrega_almenos_una_categoria">Add at least one category to continue</string>
    <string name="agrega_almenos_un_tipo">Add at least one type to continue</string>
    <string name="tipo_minuscula">" type"</string>
    <string name="start_pause">Start or pause</string>
    <string name="error_bd">Error while executing query</string>
    <string name="error_unknown">Unknown error</string>
    <string name="app_widget_description">Events widget</string>
    <string name="excepcion_no_capturada">Uncaught exception</string>
    <string name="error_ocurrio">An error occurred.</string>
    <string name="quieres_enviar_informe">Would you like to send a report?</string>
    <string name="enviar">Send</string>
    <string name="exito_insertando">Correctly inserted</string>
    <string name="exito_modificando">Correctly modified</string>
    <string name="tiempos">" times"</string>
    <string name="exito_borrando">Correctly deleted</string>
    <string name="about_app">About the app</string>
    <string name="about_text">This app was developed in 2024 as the End-Of-Degree task by jmormar2412.</string>
</resources>