<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.builders.NewCategoriaActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_categoria"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/et_nombre_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/titulo"
        android:hint="@string/nombre_categoria" />

    <EditText
        android:id="@+id/et_acronimo_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/et_nombre_categoria"
        android:hint="@string/acronimo_categoria" />

    <top.defaults.colorpicker.ColorWheelView
        android:id="@+id/color_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_acronimo_categoria" />

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_wheel"
        android:text="@string/guardar"
        android:layout_margin="30sp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>