<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="20sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".objectbuilders.NewNotaActivity">

    <EditText
        android:id="@+id/et_nuevanota_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo" />

    <CheckBox
        android:id="@+id/cb_nuevanota_includecategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incluir_categoria"
        android:layout_below="@id/et_nuevanota_title"/>

    <Spinner
        android:id="@+id/sp_nuevanota_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cb_nuevanota_includecategory"
        android:layout_below="@id/et_nuevanota_title"
        android:padding="13sp"
        android:visibility="gone"/>



    <EditText
        android:id="@+id/et_nuevanota_text"
        android:layout_width="match_parent"
        android:layout_height="460sp"
        android:layout_below="@id/cb_nuevanota_includecategory"
        android:gravity="start|top"
        android:hint="@string/escriba_aqui"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:scrollbarSize="4sp"/>


    <Button
        android:id="@+id/bt_nuevanota_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_nuevanota_text"
        android:onClick="crearNota"
        android:layout_margin="10sp"
        android:text="@string/guardar" />


</RelativeLayout>