<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.modifiers.ModifyHoraActivity"
    android:padding="16dp"
    tools:ignore="LabelFor">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_hora"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_diasemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_de_la_semana"
        android:textSize="18sp"
        android:layout_below="@id/tv_titulo"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/sp_diasemana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_diasemana"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tv_horainicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_inicial"
        android:textSize="18sp"
        android:layout_below="@id/sp_diasemana"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/et_horainicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_horainicial"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:inputType="time" />

    <TextView
        android:id="@+id/tv_horafinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_final"
        android:textSize="18sp"
        android:layout_below="@id/et_horainicial"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/et_horafinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_horafinal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:inputType="time"/>

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="18sp"
        android:layout_below="@id/et_horafinal"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/sp_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_categoria"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="24dp"
        android:layout_below="@id/sp_categorias"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16sp"/>

    <Button
        android:id="@+id/bt_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:layout_marginTop="24dp"
        android:layout_below="@id/sp_categorias"
        android:layout_marginStart="16sp"/>

</RelativeLayout>